--- a/ch01.asciidoc
+++ b/ch01.asciidoc
@@ -1,7 +1,6 @@
 == Kunal's Summary
-.Bulleted
 * Bitcoin vs. bitcoin vs. Bitcoin protocol
-**
+** test
 
 [role="pagenumrestart"]
 [[ch01_intro_what_is_bitcoin]]
