--- a/ch01.asciidoc
+++ b/ch01.asciidoc
@@ -1,4 +1,5 @@
 == Kunal's Summary
+
 * What is Bitcoin anyway?
 ** Bitcoin is a collection of concepts and technologies that form the basis of a digital money ecosystem, while bitcoin refers to one unit of the currency
 ** The Bitcoin protocol stack refers to the open source instructions of how any computing device connected to the internet can communicate with other nodes on the Bitcoin network, in the same way it uses the TCP/IP protocol to communicate with other nodes on the Internet
@@ -26,9 +27,24 @@
 ** Satoshi withdrew from the public in 2011 leaving the responsibility of developing the code to a thriving group of volunteers, and his/her/their identity is unknown
 ** Nakamoto's invention is a practical and novel solution to the Byzantine Generals' Problem with the Proof-of-Work algorithm
 
+* Bitcoin Uses, Users, and Their Stories
+** Bitcoin is a protocol that can be accessed using a client application that speaks the protocol
+*** "Bitcoin wallet" is a wallet is the most common user interface to the Bitcoin system, just like a web browser is the most common user interface for the HTTP protocol
+**** Desktop wallet - first wallet created as reference implementation, but running on Windows or Mac OS has certain security disadvantages
+**** Mobile wallet - most common, easy to use
+**** Web wallet - accessed through web browswer and store user's wallet on server owned by third party, some services operate using client-side code running in user's browser, keeping control of keys in the hands of the user, but most compromise by taking control of keys in exchange for ease-of-use
+**** Hardware wallet - devices that operate a secure self-contained Bitcoin wallet on special purpose hardware, all Bitcoin-related operations are handled on the specialized hardware (*very secure*)
+*** There is also a reference implementation of  the Bitcoin protocol that includes a wallet, known as the "Satoshi Client" or "Bitcoin Core," derived from the original implementation written by Satoshi Nakamoto
+**** Full-node client - stores entire blockchain, manages users' wallets, and can initiate transactions directly on the Bitcoin network (need ~350 GB for blockchain and 2 GB of RAM, but offers complete autonomy and independent transaction verification)
+**** Lightweight client - also knowns as simplified-payment-verification (SPV) client, connects to Bitcoin full nodes to access transaction information, stores user wallet locally, and creates/validates/transmits transactions, can interact directly with Bitcoin network without intermediary
+**** Third-party API client - interacts with Bitcoin through a third-party system of APIs, rather than connecting to the Bitcoin network directly
+** Mnemonic Words - most modern Bitcoin wallets will provide a phrase of 12-24 English words to act as a recovery phrase in case you lose access to your wallet (write down 2 copies, keep safe in locker)
 
-
-
+* Alice's Journey
+** When Alice uses her new bitcoin wallet and buys new bitcoin, her wallet randomly generates a private key which is used to derive Bitcoin addresses that direct to her wallet
+** Bitcoin addresses start with 1, 3, or bc1. Like email addresses, they can be shared with other bitcoin users who can use them to send bitcoin directly to your wallet. There is nothing sensitive, from a security perspective, about the Bitcoin address. It can be posted anywhere without risking the security of the account. Unlike email addresses, you can create new addresses as often as you like, all of which will direct funds to your wallet. In fact, many modern wallets automatically create a new address for every transaction to maximize privacy. A wallet is simply a collection of addresses and the keys that unlock the funds within.
+** Anytime you buy bitcoin, KYC is involved
+** Each bitcoin is divided into 100 million subunits, each called a "satoshi" - *divisble*
 
 [role="pagenumrestart"]
 [[ch01_intro_what_is_bitcoin]]
